# claude_python_selenium

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
config/: config-prod.yaml  config-qa.yaml  config-staging.yaml  config.yaml
src/framework/: __init__.py
src/framework/config/: config_manager.py
src/framework/driver/: __init__.py  driver_factory.py
src/framework/enums/: __init__.py  browser_type.py
src/framework/exceptions/: __init__.py  framework_exceptions.py
src/framework/pages/: base_page.py  home_page.py  login_page.py
src/framework/utils/: __init__.py  data_reader.py  screenshot_utils.py  wait_utils.py
tests/: conftest.py  test_login.py
tests/data/: login_data.json
